--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ name = "graph-issuer"
 version = "0.1.0"
 requires-python = ">=3.9"
 dependencies = [
+    "python_async_framework @ git+https://github.com/michael-tran-91/python-async-framework.git@github.v1.0.3",
+    "jwt"
 ]
 
 [tool.setuptools]
