--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ version = "0.1.0"
 requires-python = ">=3.9"
 dependencies = [
     "python_async_framework @ git+https://github.com/michael-tran-91/python-async-framework.git@github.v1.0.3",
-    "jwt"
+    "pyjwt",
+    "cryptography"
 ]
 
 [tool.setuptools]
